map deyarli bitti

--- a/src/shared/localization/locales/ar_SA.json
+++ b/src/shared/localization/locales/ar_SA.json
@@ -624,7 +624,7 @@
   "sidebar.sample": "عينة",
   "sidebar.sample.dashboard": "صفحة 2",
   "sidebar.sample.product": "صفحة 1",
-  "sidebar.sample.category": "صفحة 2",
+  "sidebar.sample.map": "صفحة 2",
   "sidebar.sample.partner": "صفحة 3",
   "sidebar.sample.banner": "صفحة4",
   "sidebar.sample.contact": "صفحة 5",
