--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -629,7 +629,7 @@
   "sidebar.sample": "Sample",
   "sidebar.sample.dashboard": "Dashboard",
   "sidebar.sample.product": "Product",
-  "sidebar.sample.category": "Category",
+  "sidebar.sample.map": "Map",
   "sidebar.sample.partner": "Partner",
   "sidebar.sample.banner": "Banner",
   "sidebar.sample.contact": "Contact",
