--- a/src/shared/localization/locales/es_ES.json
+++ b/src/shared/localization/locales/es_ES.json
@@ -624,7 +624,7 @@
   "sidebar.sample": "Muestra",
   "sidebar.sample.dashboard": "Página 1",
   "sidebar.sample.product": "Página 2",
-  "sidebar.sample.category": "Página 3",
+  "sidebar.sample.map": "Página 3",
   "sidebar.sample.partner": "Partner",
   "sidebar.sample.banner": "Banner",
   "sidebar.sample.contact": "Contact",
