--- a/src/shared/localization/locales/fr_FR.json
+++ b/src/shared/localization/locales/fr_FR.json
@@ -623,7 +623,7 @@
   "sidebar.multiLevel.level3": "Niveau 3",
   "sidebar.sample": "Échantillon",
   "sidebar.sample.product": "Page 1",
-  "sidebar.sample.category": "Page 2",
+  "sidebar.sample.map": "Page 2",
   "sidebar.sample.partner": "Partner",
   "sidebar.sample.banner": "Banner",
   "sidebar.sample.contact": "Contact",
