--- a/src/shared/localization/locales/it_IT.json
+++ b/src/shared/localization/locales/it_IT.json
@@ -624,7 +624,7 @@
   "sidebar.sample": "Campione",
   "sidebar.sample.dashboard": "Pagina 1",
   "sidebar.sample.product": "Pagina 2",
-  "sidebar.sample.category": "Pagina 3",
+  "sidebar.sample.map": "Pagina 3",
   "sidebar.sample.partner": "Pagina 4",
   "sidebar.sample.banner": "Pagina 5",
   "sidebar.sample.contact": "Pagina 6",
