--- a/src/shared/localization/locales/zh-Hans.json
+++ b/src/shared/localization/locales/zh-Hans.json
@@ -624,7 +624,7 @@
   "sidebar.sample": "样品",
   "sidebar.sample.dashboard": "第1页",
   "sidebar.sample.product": "第2页",
-  "sidebar.sample.category": "第3页",
+  "sidebar.sample.map": "第3页",
   "sidebar.sample.partner": "第4页",
   "sidebar.sample.banner": "第5页",
   "sidebar.sample.contact": "第6页",
