product deyarli bitti

--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -631,7 +631,7 @@
   "sidebar.sample.product": "Product",
   "sidebar.sample.map": "Map",
   "sidebar.sample.partner": "Partner",
-  "sidebar.sample.banner": "Banner",
+  "sidebar.sample.product": "Product",
   "sidebar.sample.contact": "Contact",
   "sidebar.sample.service": "Service",
   "sidebar.sample.orders": "Orders",
