--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -631,8 +631,11 @@
   "sidebar.sample.product": "Product",
   "sidebar.sample.map": "Map",
   "sidebar.sample.partner": "Partner",
-  "sidebar.sample.product": "Product",
+  "sidebar.sample.banner": "Banner",
+  "sidebar.sample.filial": "Filial",
+  "sidebar.sample.filialInner": "Filial Inner",
   "sidebar.sample.contact": "Contact",
+  "sidebar.sample.news": "News",
   "sidebar.sample.service": "Service",
   "sidebar.sample.orders": "Orders",
   "customizer.layoutTypes": "Layout Types",
