--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -636,6 +636,7 @@
   "sidebar.sample.filialInner": "Filial Inner",
   "sidebar.sample.contact": "Contact",
   "sidebar.sample.news": "News",
+  "sidebar.sample.about": "About",
   "sidebar.sample.service": "Service",
   "sidebar.sample.orders": "Orders",
   "customizer.layoutTypes": "Layout Types",
