ABOUT bitdi lekin error bermoqda

--- a/src/shared/localization/locales/en_US.json
+++ b/src/shared/localization/locales/en_US.json
@@ -638,7 +638,8 @@
   "sidebar.sample.news": "News",
   "sidebar.sample.about": "About",
   "sidebar.sample.service": "Service",
-  "sidebar.sample.orders": "Orders",
+  "sidebar.sample.testDrive": "Test Drive",
+  "sidebar.sample.dealers": "Dealers",
   "customizer.layoutTypes": "Layout Types",
   "sidebar.app.dashboard.analytics": "Analytics",
   "dashboard.analytics.welcome": "Welcome",
